#910 Implement ability to open/close DB connections not tied to web requests - massive refactoring, moved db configuration code from ActiveWeb to ActiveJDBC, where it belongs
(cherry picked from commit 2d2e5cdd07393c86f9b3e736f9fa60e34df4f3c3)